// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test popup example 1`] = `
"<div class=\\"var-popup-example\\">
  <div class=\\"app-type\\">弹出位置</div> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">居中弹出</div>
  </button> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">下方弹出</div>
  </button> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">上方弹出</div>
  </button> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">左侧弹出</div>
  </button> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">右侧弹出</div>
  </button>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
      <transition-stub name=\\"var-pop-center\\"></transition-stub>
    </div>
  </transition-stub>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
      <transition-stub name=\\"var-pop-bottom\\"></transition-stub>
    </div>
  </transition-stub>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
      <transition-stub name=\\"var-pop-top\\"></transition-stub>
    </div>
  </transition-stub>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
      <transition-stub name=\\"var-pop-left\\"></transition-stub>
    </div>
  </transition-stub>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
      <transition-stub name=\\"var-pop-right\\"></transition-stub>
    </div>
  </transition-stub>
  <div class=\\"app-type\\">遮罩层样式</div> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">遮罩层class</div>
  </button>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay custom-overlay\\" style=\\"z-index: 1999;\\"></div>
      <transition-stub name=\\"var-pop-center\\"></transition-stub>
    </div>
  </transition-stub> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">遮罩层style</div>
  </button>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999; background-color: rgba(0, 0, 0, 0.3);\\"></div>
      <transition-stub name=\\"var-pop-center\\"></transition-stub>
    </div>
  </transition-stub>
  <div class=\\"app-type\\">注册事件</div> <button class=\\"var-button var--box mt-10 var-button--normal var--flex var-button--block var-button--primary var-elevation--2\\">
    <!---->
    <div class=\\"var-button__content\\">注册事件</div>
  </button>
  <transition-stub name=\\"var-fade\\">
    <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
      <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
      <transition-stub name=\\"var-pop-center\\"></transition-stub>
    </div>
  </transition-stub>
</div>"
`;

exports[`test popup show 1`] = `
"<transition-stub name=\\"var-fade\\">
  <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
    <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
    <transition-stub name=\\"var-pop-center\\"></transition-stub>
  </div>
</transition-stub>"
`;

exports[`test popup show 2`] = `
"<transition-stub name=\\"var-fade\\">
  <div class=\\"var--box var-popup\\" style=\\"z-index: 2001;\\">
    <div class=\\"var-popup__overlay\\" style=\\"z-index: 2002;\\"></div>
    <transition-stub name=\\"var-pop-center\\">
      <div class=\\"var-popup__content var-elevation--3 var-popup--center\\" style=\\"z-index: 2003;\\">
        default slot content
      </div>
    </transition-stub>
  </div>
</transition-stub>"
`;

exports[`test popup show 3`] = `
"<transition-stub name=\\"var-fade\\">
  <div class=\\"var--box var-popup\\" style=\\"z-index: 2001; display: none;\\">
    <div class=\\"var-popup__overlay\\" style=\\"z-index: 2002;\\"></div>
    <transition-stub name=\\"var-pop-center\\"></transition-stub>
  </div>
</transition-stub>"
`;
